Make mag-theme child of TwentyTwentyFour instead of TwentyTwentyThree

--- a/wp-site-content/wp-content/themes/mag-theme/style.css
+++ b/wp-site-content/wp-content/themes/mag-theme/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name:   mag theme
 Theme URI:    https://alby.band
-Description:  Twenty Twenty Three Child Theme
+Description:  Twenty Twenty Four Child Theme
 Author:       Mark Grossmann
 Author URI:   alby.band
-Template:     twentytwentythree
+Template:     twentytwentyfour
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
